@@ -14,3 +14,4 @@ Emfox Zhou <emfoxzhou@gmail.com>
 Contributors
 ------------
 Neversay <neversay.misher@gmail.com>
+Jason Xia <jasonxh@gmail.com>
